force-app/main/default/objects/OpportunityContactRole_00D24000000ivfi__dll/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <label>Primary</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>IsPrimary</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>